--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "directories": {
     "test": "test"
   },
+  "engines": {
+    "node": "6.7.0",
+    "npm": "3.10.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch"
+    "webpack": "webpack --watch",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
