--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-datetime": "^2.10.3",
     "react-dom": "^15.6.1",
     "react-ga": "^2.3.5",
     "react-redux": "^5.0.5",
