--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "intro.js": "^2.8.0-alpha.1",
+    "material-ui": "^0.19.4",
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-datetime": "^2.10.3",
     "react-dom": "^15.6.1",
     "react-ga": "^2.3.5",
+    "react-notification-system": "^0.2.16",
+    "react-notification-system-redux": "^1.2.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
