--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack": "^2.6.1"
   },
   "devDependencies": {
+    "expose-loader": "^0.7.4",
     "react-addons-perf": "^15.4.2",
     "react-perf-tool": "^0.2.2",
     "redux-logger": "^3.0.6"
